--- a/app.yaml
+++ b/app.yaml
@@ -1,2 +1,17 @@
 runtime: custom
 env: flex
+
+automatic_scaling:
+  target_cpu_utilization: 0.65
+  min_instances: 1
+
+handlers:
+  - url: /.*
+    script: auto
+
+health_check:
+  enable_health_check: True
+  check_interval_sec: 30
+  timeout_sec: 4
+  unhealthy_threshold: 2
+  healthy_threshold: 2
