--- a/app.yaml
+++ b/app.yaml
@@ -2,15 +2,18 @@ runtime: custom
 env: flex
 
 automatic_scaling:
-  target_cpu_utilization: 0.65
-  min_instances: 1
+  min_num_instances: 1
+  max_num_instances: 5
+  cool_down_period_sec: 90
+  cpu_utilization:
+    target_utilization: 0.65
 
 handlers:
   - url: /.*
     script: auto
 
 health_check:
-  enable_health_check: True
+  enable_health_check: true
   check_interval_sec: 30
   timeout_sec: 4
   unhealthy_threshold: 2
